<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".rectangleActivity">


    <TextView
        android:id="@+id/tvRectangleHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Height"
        app:layout_constraintBottom_toTopOf="@+id/etRectangleHeight"
        app:layout_constraintStart_toStartOf="@+id/etRectangleHeight" />

    <TextView
        android:id="@+id/tvRectangleWidth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/width"
        app:layout_constraintBottom_toTopOf="@+id/etRectangleWidth"
        app:layout_constraintStart_toStartOf="@+id/etRectangleWidth" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="calculateRectangle"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etRectangleHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.291" />

    <EditText
        android:id="@+id/etRectangleWidth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/etRectangleHeight"
        app:layout_constraintStart_toStartOf="@+id/etRectangleHeight"
        app:layout_constraintTop_toBottomOf="@+id/etRectangleHeight" />
</android.support.constraint.ConstraintLayout>